--- a/defaultable_bond_pricing.ipynb
+++ b/defaultable_bond_pricing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "152f2a35",
    "metadata": {},
    "outputs": [
@@ -74,8 +74,29 @@
     "\n",
     "def price_defaultable_zcb(n, r0, u, d, q, a, b, F=100.0, R=0.20):\n",
     "    \"\"\"\n",
-    "    V[i,j] = [ (1-h_ij) * E_q[V[i+1,*]] + h_ij * R*F ] / (1 + r_ij),\n",
-    "    with terminal V[n,j] = F.\n",
+    "    Prices a defaultable zero-coupon bond (ZCB) using a binomial tree model.\n",
+    "\n",
+    "    Parameters:\n",
+    "    n (int): Number of time steps in the binomial tree.\n",
+    "    r0 (float): Initial short rate (interest rate at time 0).\n",
+    "    u (float): Upward movement factor for the short rate.\n",
+    "    d (float): Downward movement factor for the short rate.\n",
+    "    q (float): Risk-neutral probability of an upward movement.\n",
+    "    a (float): Base hazard rate parameter.\n",
+    "    b (float): Hazard rate growth factor.\n",
+    "    F (float): Face value of the bond (default is 100.0).\n",
+    "    R (float): Recovery rate in case of default (default is 0.20).\n",
+    "\n",
+    "    Returns:\n",
+    "    float: The price of the defaultable zero-coupon bond at time 0.\n",
+    "\n",
+    "    Functionality:\n",
+    "    - This function calculates the price of a defaultable zero-coupon bond using backward induction on a binomial tree.\n",
+    "    - The bond is subject to default risk, modeled using a hazard rate `h_ij` that depends on parameters `a` and `b`.\n",
+    "    - The short rate `r_ij` evolves according to a binomial tree, with upward and downward movements determined by `u` and `d`.\n",
+    "    - At each node in the tree, the bond price is computed as the discounted expected value of future bond prices, adjusted for default risk.\n",
+    "    - The terminal value of the bond is its face value `F`.\n",
+    "    - The function prints the hazard rate lattice, short rate lattice, and bond prices at the final step for debugging purposes.\n",
     "    \"\"\"\n",
     "    # terminal values\n",
     "    V = [np.full(i+1, F, dtype=np.float64) for i in range(n+1)]  # V[n] is length n+1\n",
